--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/password-rescue/password-rescue.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/password-rescue/password-rescue.component.html
@@ -11,7 +11,7 @@
             <br>
         </div>
 
-        <form class="formulaire-connexion" [formGroup]="form1" (submit)="onSubmit()" >
+        <form class="formulaire-connexion" [formGroup]="form1" (submit)="onSubmit($event)" >
 
           <label class="label-formulaire"><i class="fas fa-asterisk"></i> Email</label>
           <input formControlName="email" name="email" class="email" type="text" placeholder="@Email" required>
