--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/sign-in/sign-in.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/sign-in/sign-in.component.html
@@ -11,7 +11,7 @@
             <br>
         </div>
 
-        <form class="formulaire-inscription" [formGroup]="form1" (submit)="onSubmit()" >
+        <form class="formulaire-inscription" [formGroup]="form1" (submit)="onSubmit($event)" >
 
 
             <label class="label-formulaire"><i class="fas fa-asterisk"></i> Vous êtes :</label>
