--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/login/login.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/login/login.component.html
@@ -11,7 +11,7 @@
             <br>
         </div>
 
-        <form class="formulaire-connexion" [formGroup]="form1" (submit)="onSubmit()" >
+        <form class="formulaire-connexion" [formGroup]="form1" (submit)="onSubmit($event)" >
 
           <label class="label-formulaire"><i class="fas fa-asterisk" ></i> Pseudo</label>
           <input formControlName="name" name="name" class="email" type="text" placeholder="@Email ou Pseudo" required>
