--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/password-rescue-modification/password-rescue-modification.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/password-rescue-modification/password-rescue-modification.component.html
@@ -12,7 +12,7 @@
       <br>
     </div>
 
-    <form class="formulaire-inscription" [formGroup]="form1" (submit)="onSubmit()" >
+    <form class="formulaire-inscription" [formGroup]="form1" (submit)="onSubmit($event)" >
 
       <label class="label-formulaire"><i class="fas fa-asterisk"> </i> Mot de Passe</label>
       <input formControlName="password" name="password" class="mdp" type="password" required>
