--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-list-merchant/commerce-list-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-list-merchant/commerce-list-merchant.component.html
@@ -13,7 +13,7 @@
         <app-commerce-merchant-view *ngFor="let c of commerces" [commerce]="c" ></app-commerce-merchant-view>
 
         <div class="bouton-ajouter" class="cercle-plus" >
-          <span id ="" class="plus" [routerLink]="'merchant/productTemplate/addOrUpdate'" ><i class="fas fa-plus"></i>Ajouter une nouvelle fiche commerce</span>
+          <span id ="" class="plus" routerLink="/merchant/commerce/addOrUpdate" ><i class="fas fa-plus"></i>Ajouter une nouvelle fiche commerce</span>
         </div>
 
       </div>
