--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/product-template-list-merchant/product-template-list-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/product-template-list-merchant/product-template-list-merchant.component.html
@@ -160,7 +160,7 @@
 
 
         <div class="bouton-ajouter" class="cercle-plus" >
-          <span id ="" class="plus" [routerLink]="'merchant/productTemplate/addOrUpdate'" ><i class="fas fa-plus"></i>Ajouter une nouvelle fiche produit</span>
+          <span id ="" class="plus" routerLink="/merchant/productTemplate/addOrUpdate" ><i class="fas fa-plus"></i>Ajouter une nouvelle fiche produit</span>
         </div>
 
 
