--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
@@ -3,7 +3,7 @@
 
 
 <div class="row">
-  <div class="bloc-ouverture-commerce col-12 no-gutters" id="il-faut-aller-ici-commerces">
+  <div class="bloc-ouverture-commerce col-12 no-gutters">
 
     <div class="bloc-vitrine col-6 no-gutters">
       <a [routerLink]="'/commerceSheet/' + commerce.id"><img class="img-vitrine" src="/assets/img/commerce/{{ commerce.pictureDescription }}" alt="image de {{ commerce.name }}"></a>
