--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-list-merchant/commerce-list-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-list-merchant/commerce-list-merchant.component.html
@@ -4,22 +4,30 @@
 
 <section class="section-details-commerce">
   <div class="container">
-    <div class="row">
-      <div class="bloc-ouverture-commerce col-12 no-gutters" id="il-faut-aller-ici-commerces">
-        <h2 class="titre-rechercher-commerces col-12" id="il-faut-aller-ici-produits">// VOS COMMERCES</h2>
-        <p class="text-commerces">Pour modifier les informations veuillez cliquer sur le nom du commerce à modifier.</p>
-
+   <h2 class="titre-rechercher-commerces col-12" id="il-faut-aller-ici-produits">// VOS COMMERCES</h2>
+        <p class="text-commerces">Pour modifier les informations, cliquer sur le nom du commerce à modifier.</p>
 
         <app-commerce-merchant-view *ngFor="let c of commerces" [commerce]="c" ></app-commerce-merchant-view>
 
-        <div class="bouton-ajouter" class="cercle-plus" >
-          <span id ="" class="plus" routerLink="/merchant/commerce/addOrUpdate" ><i class="fas fa-plus"></i>Ajouter une nouvelle fiche commerce</span>
+
+        <!-- Section ajouter un commerce -->
+        <div class="row">
+          <div class="bloc-ouverture-commerce col-12 no-gutters">
+
+            <div class="bloc-vitrine col-6 no-gutters">
+            </div>
+
+            <div class="detail-commerce col-6">
+
+              <div class="bouton-ajouter" class="cercle-plus" >
+                <a id ="" class="plus" title="Ajouter une nouvelle fiche commerce" routerLink="/merchant/commerce/addOrUpdate" ><i class="fas fa-plus"></i></a>
+              </div>
+
+            </div>
+          </div>
         </div>
 
-      </div>
-
-        <!-- TODO bouton ajouter un nouveau commerce -->
-    </div>
 
   </div>
+
 </section>
