CSS Détails esthétiques pages d'accueil

--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.html
@@ -32,14 +32,14 @@
             </a>
             <a href="#il-faut-aller-ici-produits">
               <div class="onglet3">
-                <p class="nom-commandes">
+                <p class="nom-onglet">
                   <a routerLink="/merchant/productTemplates">Mes Produits</a>
                 </p>
               </div>
             </a>
             <a href="#il-faut-aller-ici-comptes">
               <div class="onglet4">
-                <p class="nom-commentaires">
+                <p class="nom-onglet">
                   Comptes Employés
                 </p>
               </div>
