--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.scss
@@ -67,6 +67,10 @@ h2 {
   box-shadow: 3px 3px 7px 2px rgba(0, 0, 0, 0.10);
 }
 
+.nom-onglet a {
+  color: var(--couleurVerte);
+}
+
 .onglet {
   width: 200px;
   height: 45px;
