Couleur compte merchant

--- a/angularProject/nogashiFront/src/app/components/pages/pages_individual/welcome-individual/welcome-individual.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_individual/welcome-individual/welcome-individual.component.html
@@ -9,14 +9,15 @@
           </div>
           <div class="bloc-bonjour">
             <h2>Bonjour {{connexionService.getLocalConnectedName()}}</h2>
-            <p class="message-bonjour"><i class="fas fa-quote-left"></i> Bienvenue sur votre compte. Retrouvez toutes vos informations personnelles et vos préférences. <i class="fas fa-quote-right"></i>
+            <p class="message-bonjour"><i class="fas fa-quote-left"></i> Bienvenue sur votre compte. Retrouvez ici toutes vos informations personnelles et vos préférences. <i class="fas fa-quote-right"></i>
             </p>
           </div>
         </div>
 
+        <!-- TODO menu pour le compte individual ? -->
         <div class="grand-bloc-onglets">
           <div class="bloc-onglet">
-            <a href="#il-faut-aller-ici-commerces">
+          <!--   <a href="#il-faut-aller-ici-commerces">
               <div class="onglet">
                 <p class="nom-onglet">
                   Mes Commerces
@@ -43,9 +44,10 @@
                   Comptes Employés
                 </p>
               </div>
-            </a>
+            </a> -->
           </div>
         </div>
+
 
       </div>
     </div>
