--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/menu-merchant/menu-merchant.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/menu-merchant/menu-merchant.component.scss
@@ -42,11 +42,11 @@ h2 {
 }
 
 .fa-quote-left {
-  background-color: var(--couleurVerte);
+  background-color: var(--couleurRouge);
 }
 
 .fa-quote-right {
-  background-color: var(--couleurVerte);
+  background-color: var(--couleurRouge);
 }
 
 
@@ -57,7 +57,7 @@ h2 {
 .grand-bloc-onglets {
   width: 100%;
   border-bottom: 1px solid var(--couleurNoir);
-  background-color: var(--couleurVerte);
+  background-color: var(--couleurRouge);
   padding-bottom: 30px;
 }
 
@@ -70,7 +70,7 @@ h2 {
 }
 
 .nom-onglet a {
-  color: var(--couleurVerte);
+  color: var(--couleurRouge);
 }
 
 .onglet {
@@ -82,8 +82,8 @@ h2 {
   font-weight: 400;
   font-style: italic;
   text-align: center;
-  color: var(--couleurVerte);
-  border: 1px solid var(--couleurVerte);
+  color: var(--couleurRouge);
+  border: 1px solid var(--couleurRouge);
   border-radius: 8px 00px 00px 8px;
   background-color: var(--couleurNoir);
   padding-top: 8px;
@@ -100,8 +100,8 @@ h2 {
   font-weight: 400;
   font-style: italic;
   text-align: center;
-  color: var(--couleurVerte);
-  border: 1px solid var(--couleurVerte);
+  color: var(--couleurRouge);
+  border: 1px solid var(--couleurRouge);
   background-color: var(--couleurNoir);
   padding: 8px;
   -webkit-transition: all 0.3s ease-out;
@@ -119,8 +119,8 @@ h2 {
   font-weight: 400;
   font-style: italic;
   text-align: center;
-  color: var(--couleurVerte);
-  border: 1px solid var(--couleurVerte);
+  color: var(--couleurRouge);
+  border: 1px solid var(--couleurRouge);
   background-color: var(--couleurNoir);
   padding-top: 8px;
   -webkit-transition: all 0.3s ease-out;
@@ -138,8 +138,8 @@ h2 {
   font-weight: 400;
   font-style: italic;
   text-align: center;
-  color: var(--couleurVerte);
-  border: 1px solid var(--couleurVerte);
+  color: var(--couleurRouge);
+  border: 1px solid var(--couleurRouge);
   border-radius: 0px 8px 8px 0px;
   background-color: var(--couleurNoir);
   padding-top: 8px;
