--- a/angularProject/nogashiFront/src/styles.scss
+++ b/angularProject/nogashiFront/src/styles.scss
@@ -9,6 +9,7 @@
 {
   --couleurVerte: #03DAC5;
   --couleurBleue: #6200EE;
+  --couleurRouge: #EA6F78;
 
   --couleurDegradeRose: linear-gradient(120deg, #fccb90 0%, #d57eeb 100%);
   --couleurDegradeVert: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
