Restaure le menu merchant de la page welcome

--- a/angularProject/nogashiFront/src/app/components/pages/pages_individual/welcome-individual/welcome-individual.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_individual/welcome-individual/welcome-individual.component.html
@@ -8,7 +8,7 @@
             <img class="img-bonjour" src="/assets/img/profil/{{connexionService.getLocalConnectedUser().avatarFilename}}" alt="photo de {{connexionService.getLocalConnectedName()}}">
           </div>
           <div class="bloc-bonjour">
-            <h2>Bonjour {{connexionService.getLocalConnectedName()}}</h2>
+            <h2>Compte particulier - Bonjour {{connexionService.getLocalConnectedName()}}</h2>
             <p class="message-bonjour"><i class="fas fa-quote-left"></i> Bienvenue sur votre compte. Retrouvez ici toutes vos informations personnelles et vos préférences. <i class="fas fa-quote-right"></i>
             </p>
           </div>
